# chess

./: .gitlab-ci.yml  CMakeLists.txt  changelog.md  plik.txt  readme.md
libs/: CMakeLists.txt
libs/chess/: CMakeLists.txt
libs/chess/include/chess/board/: board.h  coordinates.h  move.h
libs/chess/include/chess/pieces/: bishop.h  empty.h  king.h  knight.h  pawn.h  piece.h  piece_factory.h  queen.h  rook.h
libs/chess/src/board/: board.cpp  coordinates.cpp
libs/chess/src/pieces/: bishop.cpp  empty.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
libs/chess/tests/: CMakeLists.txt  test_chess.cpp
libs/communicator/: CMakeLists.txt
libs/communicator/include/communicator/: command.h  communicator.h
libs/communicator/src/: command.cpp  communicator.cpp
libs/communicator/tests/: CMakeLists.txt  test_communicator.cpp
libs/controller/: CMakeLists.txt
libs/controller/include/controller/: controller.h
libs/controller/src/: controller.cpp
libs/controller/tests/: CMakeLists.txt  test_controller.cpp
libs/engine/: CMakeLists.txt
libs/engine/include/engine/: engine.h
libs/engine/src/: engine.cpp
libs/engine/tests/: CMakeLists.txt  test_engine.cpp
libs/game/: CMakeLists.txt
libs/game/include/game/: game.h
libs/game/include/game/player/: ai_player.h  human_player.h  i_player.h
libs/game/src/: game.cpp
libs/game/src/player/: ai_player.cpp  human_player.cpp
libs/game/tests/: CMakeLists.txt  test_game.cpp
libs/loader/: CMakeLists.txt
libs/loader/include/loader/: loader.h
libs/loader/src/: loader.cpp
libs/loader/tests/: CMakeLists.txt  test_loader.cpp
libs/logger/: CMakeLists.txt
libs/logger/include/logger/: logger.h
libs/logger/include/logger/channels/: console_logger.h  file_logger.h  i_logger_channel.h
libs/logger/src/: logger.cpp
libs/logger/src/channels/: console_logger.cpp  file_logger.cpp
libs/logger/tests/: CMakeLists.txt  test_logger.cpp
libs/runner/: CMakeLists.txt
libs/runner/include/runner/: runner.h
libs/runner/src/: runner.cpp
libs/runner/tests/: CMakeLists.txt  test_runner.cpp
libs/view/: CMakeLists.txt
libs/view/include/view/: i_view.h
libs/view/include/view/viewers/: console_viewer.h
libs/view/src/viewers/: console_viewer.cpp
libs/view/tests/: CMakeLists.txt  test_view.cpp
save_games/: pat.txt  precheckmate.txt
src/: CMakeLists.txt  chess_game.cpp  config.h
tests/: CMakeLists.txt  test_many.cpp
